package practica1.ejercicio3;

public class Audio implements Media {
    
    public Audio(){
        
    }

    public void play(){
        System.out.println("Reproduciendo audio");
    }
}
