package practica1.ejercicio3;

public interface Media {
    void play();
}
