package practica1.ejercicio3;

public class VideoFile implements Media {
    
    public VideoFile(){
        
    }
    public void play(){
        System.out.println("Reproduciendo video");
    }
}
