package practica1.ejercicio3;

public interface VideoStream {
    void reproduce();
}
